# themeflip

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_theme.json
tests/: test_args.py  test_config.py  test_themeflip.py
themeflip/: args.py  config.py  themeflip.py  wallpaper.py
