[tool.poetry]
name = "themeflip"
version = "0.1.0"
description = "A Linux theme switcher written in Python."
authors = ["Jalen Adams <jalen@jalenkadams.me>"]
maintainers = ["Jalen Adams <jalen@jalenkadams.me>"]
license = "MIT"
readme = "README.md"
repository = "https://git.jalenkadams.me/LeftySolara/themeflip"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
