[tool.poetry]
name = "themeflip"
version = "0.1.0"
description = "A theme setter for Linux"
authors = ["Julianne Adams <julianne@julianneadams.info>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.7b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
